Fix home section's height issue on mobile
Changed height of the home sectioin to 100% when viewing on mobile.

--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@ section {
     -moz-background-size: 100% cover;
     -o-background-size: 100% cover;
     background-size: 100% cover;
-    height: 500px;
+    height: 100%;
 }
 
 #home-wrapper {
